// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Overflow Menu Different Actions For Menu Item 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 1px solid #dfe3ed;
  font-weight: 600;
  padding: 9px 22px 10px;
  color: #132144;
  line-height: 22px;
  background-color: #eef4f6d9;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 42px;
  box-sizing: border-box;
  -webkit-transition: all ease 0.15s;
  transition: all ease 0.15s;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover,
.c0:active {
  background-color: #e0ebee;
}

.c4 .c2 {
  color: #fff;
}

.c5 .c2 {
  color: #6e849a;
}

.c1 {
  color: rgba(110,132,154,0.85);
}

<button
  className="c0 c1"
  onClick={[Function]}
>
  <span
    className="c2 c3"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;

exports[`Storyshots Overflow Menu Same Actions For Menu Item 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  padding: 0;
  border: 0;
  background: inherit;
  height: 42px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;
  width: auto;
  border: 1px solid #dfe3ed;
  font-weight: 600;
  padding: 9px 22px 10px;
  color: #132144;
  line-height: 22px;
  background-color: #eef4f6d9;
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
  background-size: 1px 42px;
  box-sizing: border-box;
  -webkit-transition: all ease 0.15s;
  transition: all ease 0.15s;
}

.c0:focus,
.c0:active {
  outline: 0;
}

.c0:hover,
.c0:active {
  background-color: #e0ebee;
}

.c4 .c2 {
  color: #fff;
}

.c5 .c2 {
  color: #6e849a;
}

.c1 {
  color: rgba(110,132,154,0.85);
}

<button
  className="c0 c1"
  disabled={false}
  onClick={[Function]}
>
  <span
    className="c2 c3"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgElipsis"
    />
  </span>
</button>
`;
